- properly wait for release of keys and buttons
- re-enabled mini games

1.0.2:
- added option to destroy single bricks as workaround for bad levels
- added option for absolute mouse input
- fixed bug in level set preview

1.0.1:
- smoother auto speed transition for balls
- sort file names directly when reading directory
- optimize code by default (--enable-debug required for debug info)
- optimized game loop delay
- added option for fps limit
- draw menu tooltip only once and with delay
- allow z or y to confirm

1.0:
- "new" level set LBreakoutHD
- level set select dialog
- resume option
- continue option
- tooltips for menu
- tons of fixes and enhancements 

0.8:
- added sounds, effects, menu
- fixed a lot of bugs

0.5:
- initial release